@@ -3,10 +3,10 @@ dnl $Id$
 
 # Init.
 AC_PREREQ(2.57)
-AC_INIT(libticalcs2, 0.2.3, [tilp-users@lists.sourceforge.net])
+AC_INIT(libticalcs2, 0.2.4, [tilp-users@lists.sourceforge.net])
 
 dnl Release versioning info
-VERSION="0.2.3"
+VERSION="0.2.4"
 AC_SUBST(VERSION)
 
 dnl Library version.
@@ -16,9 +16,9 @@ dnl  * If you added things to the api, increment 'current',
 dnl    reset 'revision' and increment 'age'.
 dnl  * If you changed/removed things from the api, increment 'current',
 dnl    reset 'revision' and reset 'age'.
-LT_CURRENT=3
-LT_REVISION=1
-LT_AGE=1
+LT_CURRENT=4
+LT_REVISION=0
+LT_AGE=2
 LT_LIBVERSION="$LT_CURRENT:$LT_REVISION:$LT_AGE"
 AC_SUBST(LT_LIBVERSION, $LT_CURRENT:$LT_REVISION:$LT_AGE)
 
